--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+cairocffi==0.9.0
+CairoSVG==2.2.1
+cffi==1.11.5
+cssselect2==0.2.1
+defusedxml==0.5.0
 Django==1.11.17
+html5lib==1.0.1
+Pillow==5.3.0
+psycopg2-binary==2.7.6.1
+pycparser==2.19
+Pyphen==0.9.5
 pytz==2018.7
+six==1.12.0
+tinycss2==0.6.1
 WeasyPrint==43
+webencodings==0.5.1
